Revertendo commit invalido